@@ -647,6 +647,40 @@ name|length
 argument_list|)
 expr_stmt|;
 comment|// there is the term thousand in the field field2
+try|try
+block|{
+name|similar
+operator|=
+name|spellChecker
+operator|.
+name|suggestSimilar
+argument_list|(
+literal|"tousand"
+argument_list|,
+literal|10
+argument_list|,
+name|r
+argument_list|,
+literal|null
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|NullPointerException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+literal|"threw an NPE, and it shouldn't have"
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|addwords
 specifier|private
